Add: styling option in tailwind

--- a/calendar_ai_agent_web_app/frontend/src/tailwind.output.css
+++ b/calendar_ai_agent_web_app/frontend/src/tailwind.output.css
@@ -42,6 +42,12 @@
 .flex-1 {
   flex: 1;
 }
+.resize {
+  resize: both;
+}
+.resize-none {
+  resize: none;
+}
 .flex-col {
   flex-direction: column;
 }
@@ -62,6 +68,9 @@
 }
 .justify-end {
   justify-content: flex-end;
+}
+.overflow-hidden {
+  overflow: hidden;
 }
 .overflow-y-auto {
   overflow-y: auto;
